Fixed help prompt showing on mobile, removed seconds from last updated time

--- a/files/css/main.css
+++ b/files/css/main.css
@@ -661,7 +661,7 @@ p {
         padding-right: 40px;
     }
     .information .what_text {
-        display: none;
+        display: none !important;
     }
 }
 @media only screen and (max-width: 767px) {
